--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,5 @@ deploy:
   - provider: script
     skip_cleanup: true
     script: GIT_USER="${GH_NAME}" yarn run publish-gh-pages
+    on:
+      branch: docusaurus
