--- a/website/package.json
+++ b/website/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "finos-fo-website",
+  "name": "finos-fo",
   "repository": "https://github.com/finos-fo/finos-fo.github.io.git",
   "license": "Apache-2.0",
   "scripts": {
