--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,16 @@ before_install:
   - echo "machine github.com login ${GH_NAME} password ${GH_TOKEN}" > ~/.netrc
 
 script:
-  - cd website && yarn install && yarn run typedoc && GIT_USER="${GH_NAME}" yarn run publish-gh-pages
+  - cd website && yarn install && yarn run typedoc && yarn run build
+
+- provider: pages
+  skip-cleanup: true
+  github-token: $GH_TOKEN
+  email: $GH_EMAIL
+  name: $GH_NAME
+  verbose: true
+  keep-history: true
+  local-dir: website/build
+  target_branch: gh-pages
+  on:
+    branch: master
