--- a/.travis.yml
+++ b/.travis.yml
@@ -19,14 +19,15 @@ before_install:
 script:
   - cd website && yarn install && yarn run typedoc && yarn run build
 
-- provider: pages
-  skip-cleanup: true
-  github-token: $GH_TOKEN
-  email: $GH_EMAIL
-  name: $GH_NAME
-  verbose: true
-  keep-history: true
-  local-dir: website/build
-  target_branch: gh-pages
-  on:
-    branch: master
+deploy:
+  - provider: pages
+    skip-cleanup: true
+    github-token: $GH_TOKEN
+    email: $GH_EMAIL
+    name: $GH_NAME
+    verbose: true
+    keep-history: true
+    local-dir: website/build
+    target_branch: gh-pages
+    on:
+      branch: master
