--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,9 @@ before_install:
   - echo "machine github.com login ${GH_NAME} password ${GH_TOKEN}" > ~/.netrc
 
 script:
-  - cd website && yarn install && yarn run typedoc && yarn run build
-  - cd codegen && yarn install && yarn run quicktype-java && yarn run quicktype-python && yarn run quicktype-cs
-  - cd codegen && yarn run build-java && build-node
+  - cd website && yarn install && yarn run typedoc && yarn run build && cd -
+  - cd codegen && yarn install && yarn run quicktype-java && yarn run quicktype-python && yarn run quicktype-cs && cd -
+  - cd codegen && yarn run build-java && build-node && cd -
 
 deploy:
   - provider: pages
