--- a/mvn-codegen/package.json
+++ b/mvn-codegen/package.json
@@ -1,15 +1,12 @@
 {
   "name": "finos-fo-codegen-mvn",
-  "repository": "https://github.com/finos-fo/finos-fo.github.io.git",
+  "repository": "https://github.com/finos-fo/finos-fo.git",
   "license": "Apache-2.0",
-  "files": ["target/node/*"],
   "scripts": {
-    "quicktype-java": "rm -rf target/java ; export DIR=$PWD/.. ; mkdir -p target/java/src/main/java/org/finos/fo ; cp pom.template.xml target/java/pom.xml ; cd target/java/src/main/java/org/finos/fo ; quicktype $DIR/src/objects/* --lang java --package org.finos.fo -o .",
-    "quicktype-python": "rm -rf target/python ; export DIR=$PWD/.. ; mkdir -p target/python ; quicktype $DIR/src/objects/* --lang python -o target/python/financial-objects.py",
-    "quicktype-cs": "rm -rf target/cs ; export DIR=$PWD/.. ; mkdir -p target/cs ; quicktype $DIR/src/objects/* --lang cs --namespace Finos.FinancialObjects -o target/cs/FinancialObjects.cs",
-    "java-bundle": "cd target/java ; mvn install",
-    "print-java": "jar -tf target/java/target/*.jar",
-    "deploy-java": "cd target/java ; mvn deploy"
+    "generate": "rm -rf target/java ; export DIR=$PWD/.. && mkdir -p target/java/src/main/java/org/finos/fo && cp pom.template.xml target/java/pom.xml && cd target/java/src/main/java/org/finos/fo && quicktype $DIR/src/objects/* --lang java --package org.finos.fo -o . && cd -",
+    "bundle": "cd target/java && mvn install && cd -",
+    "test": "cd target/java && mkdir -p src/test/java/org/finos/fo && cp ../../PrintoutTest.java.template src/test/java/org/finos/fo/PrintoutTest.java && mvn test && cd -",
+    "publish": "cd target/java && mvn deploy && cd -"
   },
   "devDependencies": {
     "quicktype": "15.0.171"
