--- a/website/package.json
+++ b/website/package.json
@@ -5,15 +5,11 @@
     "examples": "docusaurus-examples",
     "start": "docusaurus-start",
     "build": "docusaurus-build",
-    "test": "node ../src/samples/printout.ts",
     "write-translations": "docusaurus-write-translations",
     "version": "docusaurus-version",
-    "rename-version": "docusaurus-rename-version",
-    "typedoc": "./run-typedoc.sh"
+    "rename-version": "docusaurus-rename-version"
   },
   "devDependencies": {
-    "docusaurus": "1.12.0",
-    "typedoc": "0.15.3",
-    "typedoc-plugin-markdown": "2.1.1"
+    "docusaurus": "1.14.7"
   }
 }
